# forge

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/manifests/: m02_fixture_holdouts.json
docs/: FORGE_ANCHOR.md  competition_rules.md  forge.md  kaggle_submission_bible.md
docs/kaggle/: kaggle_setup_evidence.md  kaggle_setup_runbook.md  notebook_debug_standard.md
docs/milestones/M00/: M00_audit.md  M00_plan.md  M00_summary.md  M00_toolcalls.md
docs/milestones/M01/: M01_audit.md  M01_plan.md  M01_run1.md  M01_summary.md  M01_toolcalls.md  public_baseline_intake.md
docs/milestones/M02/: M02_audit.md  M02_plan.md  M02_run1.md  M02_summary.md  M02_toolcalls.md
docs/milestones/M03/: M03_audit.md  M03_plan.md  M03_run1.md  M03_summary.md  (+1 more)
notebooks/: README.md  forge_m01_kaggle_debug_probe.ipynb
scripts/: README.md  eval_predictions.py  make_dataset.py  probe_local_5090.py  run_cuda_training_feasibility.py  validate_candidate_manifest.py  validate_reproduction_plan.py  validate_submission.py  verify_cuda_torch.py
src/forge_nemotron/: __init__.py
tests/unit/: __init__.py  test_artifact_hashing.py  test_candidate_manifest.py  test_cuda_torch_verify.py  test_cuda_training_feasibility.py  test_dataset_manifest.py  test_eval_scorer.py  test_generator_determinism.py  test_gpu_probe.py  test_import.py  test_metric_boxed.py  test_package_validator.py  test_reproduction_plan.py  test_run_manifest.py  test_solver_arithmetic.py  test_solver_base.py  test_solver_string_transform.py  test_synthetic_writer.py
(+184 files in other folders)
